2015-03-13 Fixed issue with sending events in Shape Tracing module
2015-03-12 Fixed issue with clicking on Android 4.4.2 in Image Identification module
2015-03-12 Fixed issue with playing audio on Firefox 19 in Slideshow module
2015-03-12 Fixed Show Answers mode in Table module
2015-03-11 Added show() and hide() commands to Multiple Gap module
2015-03-11 Fixed problem with reacting to ShowAnswers event in Multiple Gap module connected to Image Source modules
2015-03-09 Added reset command in Image Gap module
2015-03-09 Fixed issue with setting opacity, drawing and double lines in Android 4.1.1, 4.1.2, 4.2.2, 4.3, 4.4.2 in Shape Tracing module
2015-03-09 Fixed issue with restoring state in IWB Toolbar module
2015-03-06 Fixed issue with restoring state in older content that uses Fractions module
2015-03-06 Fixed issue with state in Double State Button module
2015-03-06 Fixed calculating results for just part of lesson in Hierarchical Lesson Report module
2015-03-05 Fixed issue with commands play/stop/next/previous in Slideshow module
2015-03-05 Fixed issue with using play command on iOS 7 and iOS 8 in Video module
2015-03-04 Fixed issue with double lines in Android 4.1.1, 4.1.2, 4.2.2, 4.3, 4.4.2 in Connection module
2015-03-02 Fixed issues with parsing HTML in Text Audio module
2015-02-27 Fixed issue with serving of mixed content by HTTPS and HTTP in YouTube module
2015-02-27 Fixed issue with keeping state disable/enable in filledGap in Text module
2015-02-27 Fixed issue with double lines in Android 4.1.1, 4.1.2, 4.2.2, 4.3 and 4.4.2 in Drawing module
2015-02-26 Added changes to Fraction module
2015-02-26 Added new commands moveTo, next, previous, play, pause, stop in Slideshow module
2015-02-26 Fixed issue with opacity in Drawing module
2015-02-25 Fixed issue with layout when LearnPen Drawing module is on page
2015-02-25 Added new command setEraserOff to Shape Tracing and Drawing modules
2015-02-25 Fixed issue with Step property in Line Number module.